fwupd: Make sure we don't crash trying to print an error

BUG: 455132


(cherry picked from commit cc0fc02a03d71cf5d0aad5cf1ae66bbf0a120219)